Fix for misaligned tab-close-buttons

--- a/userChrome.css
+++ b/userChrome.css
@@ -432,7 +432,8 @@ toolbar .toolbarbutton-1:hover > .toolbarbutton-badge-stack {
 
 /*Hide and show close tab button*/
 #TabsToolbar .tab-close-button {
-  margin-left: -5.5px !important;
+  margin-left: -3px !important;
+  margin-right: 3px !important;
   border-radius: 2px !important;
   list-style-image: url("data:image/svg+xml,%3Csvg height='16' width='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg color='%235b5b5b' transform='translate%28-713 -157%29'%3E%3Cpath d='M720.97 163.556L723.5 161l1.5 1.5-2.598 2.487L725 167.5l-1.5 1.5-2.512-2.599L718.5 169l-1.5-1.5 2.586-2.5-2.586-2.5 1.5-1.5z' fill='%235b5b5b' overflow='visible' style='marker:none'/%3E%3C/g%3E%3C/svg%3E") !important;
   filter: drop-shadow(0 1px 0 rgba(255,255,255, 0.4)) !important;
